--- a/flow_config.json
+++ b/flow_config.json
@@ -2,13 +2,13 @@
     "SOURCE": {
         "APP": "kafka",
         "DB": "",
-        "COLLECTION": "scraped_news"
+        "COLLECTION": "publications"
     },
     "TARGET": {
         "APP": "kafka",
-        "DB": "news_test",
-        "NEWS_COLLECTION": "news_test",
-        "CLUSTER_COLLECTION": "clusters_test"
+        "DB": "",
+        "COLLECTION": "processed_publications",
+        "CLUSTER_COLLECTION": "processed_clusters"
     },
     "NEWS_AGGREGATOR_CONFIG": "news_aggregator_config"
 }
